--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
     <head>
         <title>Isabella Rose</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/png" href="/icon.ico">
+        <link rel="icon" type="image/png" href="/favicon.ico">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-1.5.1.min.css"/>
         <style>
-            
+            h1: {
+                text-align: center;
+                font-family: sans-serif;
+            }
+            h3: {
+                text-align: center;
+                font-family: sans-serif;
+            }
         </style>
     </head>
     <body>
